--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,8 +1,81 @@
 .projectBody{
-    height:1000px;
+    height:100vh;
     background-image: url("../Images/LpHPPwv.jpg");
     background-position: center center;
 	background-repeat:  no-repeat;
 	background-attachment: fixed;
     background-size:  cover;
+}
+
+.header{
+    text-align: center;
+    color:white;
+    font-family: 'Merienda One', cursive;
+    background-color: 0 0 0 0.5;
+    display: block;
+    padding-top: 3%;
+}
+
+.moreWork{
+    text-align: center;
+    color: white;
+    font-family: 'Merienda One', cursive;
+}
+
+.wrapper{
+    height: 600px;
+    padding-left:20%;
+    padding-right:20%;
+    display: grid;
+    color:white;
+    background-color:rgba(193, 193, 193, 0.2);
+}
+
+.projectCard{
+    height: 600px;
+    position:relative;
+    grid-column: 1/2;
+    align-content: center;
+    padding: 0 5% 0 5%;
+}
+
+.projectCard2{
+    height: 600px;
+    position:relative;
+    grid-column: 3/4;
+    align-content: center;
+    padding: 0 5% 0 5%;
+}
+
+.projectCard3{
+    height: 600px;
+    position:relative;
+    grid-column: 5/6;
+    align-content: center;
+    padding: 0 5% 0 5%;
+}
+
+.projectCard h2{
+    text-align: center;
+}
+
+.projectCard2 h2{
+    text-align: center;
+}
+
+.projectCard3 h2{
+    text-align: center;
+}
+
+.dotaStreams{
+    background-image: url("../Images/sCPGJKu.jpg");
+    background-size: cover;
+    height: 250px;
+    position:relative;
+    align-content: center;
+}
+
+.dotaStreams:hover{
+    opacity: .5;
+    content: 'Hello';
 }
