--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,8 +1,20 @@
 .contactBody{
-    height:1000px;
+    height:100vh;
     background-image: url("../Images/Nwq7vEv.jpg");
     background-position: center center;
 	background-repeat:  no-repeat;
 	background-attachment: fixed;
     background-size:  cover;
+}
+
+#contact-form{
+    padding:5% 60% 0 10%;
+    align-content: center;
+    text-align:center;
+}
+
+#submit{
+    background-color:blue;
+    color:white;
+    height:50px;
 }
